[project]
name = "reflex-generate"
version = "0.1.0"
description = "A CLI for Reflex to automatically generate resources, inspired by Rails"
readme = "README.md"
authors = [
    { name = "NoOPeEKS", email = "arnauapps@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "reflex==0.7.12",
]

[project.scripts]
reflex-generate = "reflex_generate.reflex_generate:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.ruff]
target-version = "py310"
output-format = "concise"
line-length = 79
lint.isort.split-on-trailing-comma = false
lint.select = [
  "ANN001",
  "B",
  "C4",
  "D",
  "E",
  "ERA",
  "F",
  "FURB",
  "I",
  "N",
  "PERF",
  "PGH",
  "PTH",
  "RUF",
  "SIM",
  "T",
  "TRY",
  "UP",
  "W",
]
lint.ignore = [
  "B008",
  "D205",
  "E501",
  "F403",
  "SIM115",
  "RUF006",
  "RUF008",
  "RUF012",
  "TRY0",
  "UP038",
  "D212",
]
lint.pydocstyle.convention = "google"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["ANN001", "D100", "D103", "D104", "B018", "PERF", "T", "N"]

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"
